# panda3d-kphys

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  buildnt.sh  diagram.html  kphys_tests.h  meta.yaml  run_test.py  setup.py
kphys/: CMakeLists.txt  __init__.py  loader.py  viewer.py
kphys/core/: CMakeLists.txt
kphys/core/bullet/: README.md  controller.cxx  controller.h
kphys/core/panda/: README.md  animation.cxx  animation.h  animator.cxx  animator.h  armature.cxx  armature.h  bone.cxx  bone.h  bvhq.cxx  bvhq.h  ccdik.cxx  ccdik.h  channel.cxx  channel.h  config.cxx  config.h  controller.cxx  controller.h  controller_base.cxx  controller_base.h  converters.cxx  converters.h  effector.cxx  effector.h  frame.cxx  frame.h  hit.cxx  hit.h  hitbox.cxx  hitbox.h  ik.cxx  ik.h  multianimation.cxx  multianimation.h  multianimator.cxx  multianimator.h  puppet.cxx  puppet.h  puppetmaster.cxx  (+14 more)
kphys/gltf/: CMakeLists.txt  converter.py  parseutils.py  spec.py
kphys/gltf/mixins/: CMakeLists.txt  __init__.py  material.py  mesh.py  node.py  spring.py  texture.py
samples/: actor.frag.glsl  actor.py  actor.vert.glsl  animation.bvhq  animation.py  common.py  hitbox.py  reacher.py  yuki.py  znk.py
samples/yuki/: license.txt  scene.gltf
